--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,3 +1,6 @@
+
+/* UNIVERSALS */
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -7,6 +10,17 @@
 body {
     background-color: #d9dcd6;
 }
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+/* HEADER */
 
 .header {
     padding: 20px;
@@ -41,14 +55,6 @@ body {
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
 
 .hero {
     height: 800px;
@@ -74,6 +80,9 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
+
+/* BENEFITS SECTION */
+
 
 .benefits {
     margin-right: 20px;
@@ -134,6 +143,10 @@ p {
     max-width: 150px;
 }
 
+
+/* SEO SECTION */
+
+
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -161,6 +174,9 @@ p {
     color: #ffffff;
 }
 
+
+/* IMAGES */
+
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -172,6 +188,8 @@ p {
 .social-media-marketing img {
     max-height: 200px;
 }
+
+/* SEO SECTION */
 
 .search-engine-optimization h2 {
     margin-bottom: 20px;
@@ -188,13 +206,15 @@ p {
     font-size: 36px;
 }
 
-.footer {
+/* FOOTER */
+
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
