--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -14,6 +14,9 @@ body {
 a {
     color: #ffffff;
     text-decoration: none;
+    display: inline-block;
+    margin-left: 25px;
+    list-style-type: none;
 }
 
 p {
@@ -22,23 +25,23 @@ p {
 
 /* HEADER */
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+#logo {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+#seo {
     color: #d9dcd6;
 }
 
-.header div {
+.navButtonContainer {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -46,13 +49,8 @@ p {
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
+#navButton{
     display: inline-block;
-    margin-left: 25px;
 }
 
 
@@ -80,6 +78,8 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
+
+
 
 /* BENEFITS SECTION */
 
