--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -45,12 +45,12 @@ header {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
 }
 
 #navButton{
     display: inline-block;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
 }
 
 
@@ -81,10 +81,10 @@ header {
 
 
 
-/* BENEFITS SECTION */
+/* ASIDE SECTION */
 
 
-.benefits {
+.aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -92,60 +92,26 @@ header {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #2589bd;   
 }
 
-.benefit-lead {
+.benefit-content {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-content h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-content img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
 
 /* SEO SECTION */
-
 
 .search-engine-optimization {
     margin-bottom: 20px;
@@ -177,16 +143,17 @@ header {
 
 /* IMAGES */
 
-.search-engine-optimization img {
+
+.content-img-left {
     max-height: 200px;
+    float: left;
+    margin-right: 25px;
 }
 
-.online-reputation-management img {
+.content-img-right {
     max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
+    float: right;
+    margin-left: 25px;
 }
 
 /* SEO SECTION */
