--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -7,7 +7,7 @@
     margin: 0;
 }
 
-body {
+body, {
     background-color: #d9dcd6;
 }
 
@@ -63,16 +63,6 @@ header {
     background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
 .content {
     width: 75%;
     display: inline-block;
@@ -80,9 +70,7 @@ header {
 }
 
 
-
 /* ASIDE SECTION */
-
 
 .aside {
     margin-right: 20px;
@@ -111,9 +99,9 @@ header {
     max-width: 150px;
 }
 
-/* SEO SECTION */
+/* CONTENT SECTION */
 
-.search-engine-optimization {
+.content-section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -122,22 +110,9 @@ header {
     color: #ffffff;
 }
 
-.online-reputation-management {
+.content h2 {
     margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+    font-size: 36px;
 }
 
 
@@ -156,22 +131,6 @@ header {
     margin-left: 25px;
 }
 
-/* SEO SECTION */
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
 /* FOOTER */
 
