--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -7,7 +7,7 @@
     margin: 0;
 }
 
-body, {
+body {
     background-color: #d9dcd6;
 }
 
@@ -52,7 +52,6 @@ header {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
 
 .hero {
     height: 800px;
