--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -25,6 +25,7 @@ p {
     font-size: 16px;
 }
 
+
 /* HEADER */
 
 header {
@@ -55,6 +56,9 @@ header {
     font-size: 20px;
 }
 
+
+/* HERO SECTION */
+
 .hero {
     height: 800px;
     width: 100%;
@@ -65,9 +69,7 @@ header {
 }
 
 
-
-
-/* ASIDE SECTION */
+/* ASIDE */
 
 .aside {
     margin-right: 20px;
