--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("Develop/assets/images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
